# qwen3-asr-service

./: .dockerignore  .gitignore  DOCKERHUB.md  Dockerfile  Dockerfile.cpu  Dockerfile.linux-build  README.md  README_EN.md  build.sh  docker-compose.cpu.yml  docker-compose.yml
asr-service/: .gitignore  README.md  cli.bat  cli.sh  requirements-cpu.txt  requirements.txt  setup.sh  start.bat  start.sh
asr-service/app/: config.py  main.py
asr-service/app/api/: routes.py  schemas.py
asr-service/app/engines/: __init__.py  align_engine.py  base.py  openvino_asr_engine.py  openvino_engine.py  processor_numpy.py  punc_engine.py  qwen_asr_engine.py  qwen_cuda_engine.py
asr-service/app/pipeline/: asr_pipeline.py  audio_splitter.py
asr-service/app/runtime/: device.py  engine_selector.py  task_manager.py
asr-service/app/utils/: logger.py  model_manager.py  openvino_model_downloader.py
asr-service/app/web/: index.html  page.py
qwen3-asr-android/: README.md  build.gradle.kts  settings.gradle.kts
qwen3-asr-android/app/: build.gradle.kts
qwen3-asr-android/app/src/main/: AndroidManifest.xml
qwen3-asr-android/app/src/main/res/drawable/: ic_launcher.xml  ic_mic.xml
qwen3-asr-android/app/src/main/res/layout/: activity_history.xml  activity_main.xml  activity_settings.xml  (+1 more)
qwen3-asr-typeless/: Cargo.toml  download-ort.ps1
qwen3-asr-typeless/src/: app.rs  asr_client.rs  audio.rs  clipboard.rs  config.rs  dictionary.rs  history.rs  history_ui.rs  hotkey.rs  i18n.rs  main.rs  main_window.rs  overlay.rs  postprocess.rs  settings.rs  sound.rs  tray.rs  vad.rs
(+18 files in other folders)
