[package]
name = "qwen3-asr-typeless"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
silero-vad-rust = "6.2"
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
hound = "3.5"
dirs = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# ── Platform-specific dependencies ─────────────────────────────────────

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.9"
ksni = "0.2"
arboard = "3"
rodio = "0.19"
evdev = "0.13"
zbus = "4"
